--- a/P4M_Notebook_1.ipynb
+++ b/P4M_Notebook_1.ipynb
@@ -99,7 +99,7 @@
       "source": [
         "2 + 3"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -126,7 +126,7 @@
       "source": [
         "2 * 3"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -152,7 +152,7 @@
       "source": [
         "5 - 11"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -178,7 +178,7 @@
       "source": [
         "5.0 - 11"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -204,7 +204,7 @@
       "source": [
         "5 / 11"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -241,7 +241,7 @@
       "source": [
         "5 // 11"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -267,7 +267,7 @@
       "source": [
         "6 // 3"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -337,7 +337,7 @@
       "source": [
         "Out[4] + Out[5]"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -374,7 +374,7 @@
       "source": [
         "(3 + 4) * 5"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -400,7 +400,7 @@
       "source": [
         "3 + (4 * 5)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -426,7 +426,7 @@
       "source": [
         "3 + 4 * 5   #  What do you think will be the result?  Remember PEMDAS?"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -453,7 +453,7 @@
           "height": 232
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -499,7 +499,7 @@
       "source": [
         "(5*5)+6*(3+1) #An empty cell.  Have fun!\n"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -534,7 +534,7 @@
       "source": [
         "23 // 5  # Integer division"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -560,7 +560,7 @@
       "source": [
         "23 % 5  # The remainder after division"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -597,7 +597,7 @@
       "source": [
         "divmod(23,5)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -623,7 +623,7 @@
       "source": [
         "type(divmod(23,5))"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -658,7 +658,7 @@
       "source": [
         "type(3)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -684,7 +684,7 @@
       "source": [
         "type(3.0)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -710,7 +710,7 @@
       "source": [
         "type('Hello')"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -736,7 +736,7 @@
       "source": [
         "type([1,2,3])"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -771,7 +771,7 @@
       "source": [
         "3 + 3"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -797,7 +797,7 @@
       "source": [
         "3.0 + 3.0"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -824,7 +824,7 @@
       "source": [
         "'Hello' + 'World!'"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -853,7 +853,7 @@
       "source": [
         "[1,2,3] + [4,5,6]"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -879,7 +879,7 @@
       "source": [
         "3 + 3.0"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -906,7 +906,7 @@
       "source": [
         "3 + 'Hello!'  # Uh oh!"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -934,7 +934,7 @@
         "7+5+8.0#  An empty cell.  Have fun!\n",
         "#  Try operating on ints, floats, and strings, with different operations.  Which ones work?  How?"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -972,7 +972,7 @@
       "source": [
         "3 * 'Hello!'"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1002,7 +1002,7 @@
       "source": [
         "0 * 'Hello!'"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1031,7 +1031,7 @@
       "source": [
         "2 * [1,2,3]"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1067,7 +1067,7 @@
       "source": [
         "32*\"hi\"#  Practice cell\n"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1105,7 +1105,7 @@
       "source": [
         "2**1000"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1131,7 +1131,7 @@
       "source": [
         "2.0**1000"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1170,7 +1170,7 @@
       "source": [
         "type(2**1000)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1196,7 +1196,7 @@
       "source": [
         "type(2.0**1000)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1222,7 +1222,7 @@
       "source": [
         "2**8#  An empty cell.  Have fun!\n"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1272,11 +1272,89 @@
         "\n",
         "1. int --> integer, float --> decimal, tuple --> perminant array values, array --> collection of values, string --> plain text.\n",
         "\n",
-        "2. Division is interpreted differently depending on the data type that you are dividing. For example, an interget being divided by an interger will yield a whole number for an answer without remainder or deciman. However, a float divided by a float will yield a float.\n",
+        "2. Division is interpreted as a float. For example, if dividing an integer by another integer, it will yield a float. Likewise for floats dividing floats or any combination of the two.\n",
         "\n",
-        "3. Like Division, Multiplication is similarly treated depending on the variable types that are givin. An integer multiplied by another integer will yield an integer. A float multiplied by another float will yield a float (or decimal).\n",
+        "3. Multiplication is treated depending on the variable types that are given. An integer multiplied by another integer will yield an integer. A float multiplied by another float will yield a float (or decimal).\n",
         "\n",
         "4. 100 is an integer. 100.0 is a float."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "5.0*5 #example"
+      ],
+      "metadata": {
+        "id": "TMct6uiAdAFD",
+        "outputId": "93ffc3fc-b5cc-4a4f-89cb-4508826f0cf3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "25.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "5*5 #example"
+      ],
+      "metadata": {
+        "id": "lpunSpKPcw4y",
+        "outputId": "80e30c47-aaa4-4f88-ac6e-9fb34c3ad27f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "25"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "5/5 #example"
+      ],
+      "metadata": {
+        "id": "VQsnM6Wrcr_C",
+        "outputId": "04c9e210-925d-4457-fd1c-5dd51aff5e55",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
       ]
     },
     {
@@ -1311,7 +1389,7 @@
       "source": [
         "3 > 2"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1337,7 +1415,7 @@
       "source": [
         "type(3 > 2)"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1363,7 +1441,7 @@
       "source": [
         "10 < 3"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1389,7 +1467,7 @@
       "source": [
         "2.4 < 2.4000001"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1415,7 +1493,7 @@
       "source": [
         "32 >= 32"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1441,7 +1519,7 @@
       "source": [
         "32 >= 31"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1467,7 +1545,7 @@
       "source": [
         "2 + 2 == 4"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1502,7 +1580,7 @@
       "source": [
         "3==2#  Write your code here.\n"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1546,7 +1624,7 @@
       "source": [
         "63 % 7 == 0  # Is 63 divisible by 7?"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1572,7 +1650,7 @@
       "source": [
         "101 % 2 == 0  # Is 101 even?"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1599,15 +1677,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "LPqBN_VlU5yN",
-        "outputId": "4bff3455-75c4-4d49-d18f-475abd0e964d",
+        "outputId": "478f0aa0-4d1b-49d9-f076-035b326af23c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "4*4%5==1# Your code goes here.\n"
+        "1234567890%3==0 # Your code goes here.\n"
       ],
-      "execution_count": 53,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1617,7 +1695,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 53
+          "execution_count": 6
         }
       ]
     },
@@ -1655,7 +1733,7 @@
       "source": [
         "True and False"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1681,7 +1759,7 @@
       "source": [
         "True or False"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1707,7 +1785,7 @@
       "source": [
         "True or True"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1733,7 +1811,7 @@
       "source": [
         "not True"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1768,7 +1846,7 @@
       "source": [
         "(2 > 3) and (3 > 2)"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1794,7 +1872,7 @@
       "source": [
         "(1 + 1 == 2) or (1 + 1 == 3)"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1821,7 +1899,7 @@
       "source": [
         "not (-1 + 1 >= 0)"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1847,7 +1925,7 @@
       "source": [
         "2 + 2 == 4"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1873,7 +1951,7 @@
       "source": [
         "2 + 2 != 4  # For \"not equal\", Python uses the operation `!=`."
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1899,7 +1977,7 @@
       "source": [
         "2 + 2 != 5  # Is 2+2 *not* equal to 5?"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1925,7 +2003,7 @@
       "source": [
         "not (2 + 2 == 5)  # The same as above, but a bit longer to write."
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1960,7 +2038,7 @@
       "source": [
         "-5*-3*-2 / 2 < 0# Experiment here.\n"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1995,7 +2073,7 @@
       "source": [
         "False * 100"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2021,7 +2099,7 @@
       "source": [
         "True + 13"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2113,7 +2191,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
