--- a/P4M_Notebook_1.ipynb
+++ b/P4M_Notebook_1.ipynb
@@ -2231,7 +2231,7 @@
       "source": [
         "e = 2.71828"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2255,7 +2255,7 @@
       "source": [
         "e * e"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2281,7 +2281,7 @@
       "source": [
         "type(e)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2316,7 +2316,7 @@
       "source": [
         "my_number = 17"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2331,7 +2331,7 @@
       "source": [
         "my_number < 23"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2362,7 +2362,7 @@
       "source": [
         "my_number = 3.14"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2392,7 +2392,7 @@
         "S = S + 3\n",
         "print(S)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2441,7 +2441,7 @@
         "new_number = my_number + 1\n",
         "my_number = 3.14"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2468,7 +2468,7 @@
         "print(my_number)\n",
         "print(new_number)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2544,7 +2544,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2604,7 +2604,7 @@
       "source": [
         "type([1,2,3])"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2630,7 +2630,7 @@
       "source": [
         "type(['Hello',17])"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2665,7 +2665,7 @@
       "source": [
         "type((1,2,3))"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2704,7 +2704,7 @@
       "source": [
         "type(range(10)) # Ranges are their own type, in Python 3.x.  Not in Python 2.x!"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2730,7 +2730,7 @@
       "source": [
         "list(range(10)) # Let's see what's in the range.  Note it starts at zero!  Where does it stop?"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2765,7 +2765,7 @@
       "source": [
         "list(range(3,10))"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2791,7 +2791,7 @@
       "source": [
         "list(range(-4,5))"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2835,7 +2835,7 @@
       "source": [
         "len([2,4,6])"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2861,7 +2861,7 @@
       "source": [
         "len(range(10))  # The len command can deal with lists and ranges.  No need to convert."
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2887,7 +2887,7 @@
       "source": [
         "len(range(10,100)) # Can you figure out the length, before evaluating?"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2922,7 +2922,7 @@
       "source": [
         "list(range(1,10,2))"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2948,7 +2948,7 @@
       "source": [
         "list(range(11,30,2))"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2974,7 +2974,7 @@
       "source": [
         "list(range(-4,5,3))"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3000,7 +3000,7 @@
       "source": [
         "list(range(10,100,17))"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3035,7 +3035,7 @@
       "source": [
         "list(range(10,0,-1))"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3070,7 +3070,7 @@
       "source": [
         "list(range(10,100,7))  # What list will this create?  It won't answer the question..."
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3096,7 +3096,7 @@
       "source": [
         "list(range(14,100,7))  # Starting at 14 gives the multiples of 7."
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3122,7 +3122,7 @@
       "source": [
         "len(range(14,100,7))  # Gives the length of the list, and answers the question!"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3165,7 +3165,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3208,7 +3208,7 @@
         "print(\"To find the multiples of 3 from 300 to 3000, we use the code len(list(range(300, 30003, 3)))\")\n",
         "print('-->{}'.format(len(list(range(300, 3003, 3)))))"
       ],
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3257,7 +3257,7 @@
         "for n in [1,2,3,4,5]:\n",
         "    print(n*n)"
       ],
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3285,7 +3285,7 @@
         "for s in ['I','Am','Python']:\n",
         "    print(s + \"!\")"
       ],
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3328,7 +3328,7 @@
         "n = 5\n",
         "print(n*n)"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3378,7 +3378,7 @@
         "    P = P * n\n",
         "print(P)"
       ],
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3414,7 +3414,7 @@
         "    print(\"n is\",n,\"and P is\",P)\n",
         "print(P)"
       ],
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3451,7 +3451,7 @@
       "source": [
         "print(\"My favorite number is\",17)"
       ],
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3499,7 +3499,7 @@
         "print(\"n is\",n,\"and P is\",P)\n",
         "print (P)"
       ],
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3548,7 +3548,7 @@
         "    print(\"n is\",n,\"and P is\",P)  # this command is in the scope of the loop too!\n",
         "print(P)"
       ],
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3589,7 +3589,7 @@
         "print(\"n is\",n,\"and P is\",P)\n",
         "print(P)"
       ],
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3624,7 +3624,7 @@
         "    for y in ['a', 'b']:\n",
         "        print(x,y)"
       ],
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3664,7 +3664,7 @@
         "  for j in [1,2,3]:\n",
         "    print(j, i)"
       ],
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3749,7 +3749,7 @@
         "  C = (pi**4)/z\n",
         "print(\"7. C is {}.\".format(int(C//1)))\n"
       ],
-      "execution_count": 186,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3814,13 +3814,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PoGqUlqoU5yY"
+        "id": "PoGqUlqoU5yY",
+        "outputId": "113fbf19-461b-45c1-9e8b-7d1d2ac72a7c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "#  Start your explorations here!"
+        "#  Start your explorations here!\n",
+        "g = 120 #guess\n",
+        "X = 2\n",
+        "iterations = 10 #number of iterations\n",
+        "\n",
+        "for i in range(iterations):\n",
+        "  g = (g+(X/g))/2\n",
+        "\n",
+        "print(g)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.4142135624661987\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3830,6 +3850,15 @@
       "source": [
         "Describe your findings here in 1-2 paragraphs."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "I've found that the approximation seems to get closer to the actual square root incredible fast. Even when starting at a large guess of 120 using only 10 iterations, the answer gets within .000000001 precison of the actual root. This is something that I find to be eyebrow raising for such an incredibly simple calculation. The idea that this irrational number can be represented with just a few lines of code and not much processing is eye opening."
+      ],
+      "metadata": {
+        "id": "FvTHVgsx6yXn"
+      }
     },
     {
       "cell_type": "markdown",
@@ -3847,13 +3876,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cH0ApCftU5yY"
+        "id": "cH0ApCftU5yY",
+        "outputId": "8bcd4a7a-35d9-4aeb-fbe9-4d5fef477501",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "#  Approximate e here."
+        "#  Approximate e here.\n",
+        "import math\n",
+        "x = 1\n",
+        "e = 1\n",
+        "\n",
+        "for i in range(100):\n",
+        "  e += (math.factorial(i+1)**(-1))*(x**(i+1))\n",
+        "  \n",
+        "print(e)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.7182818284590455\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3873,13 +3922,41 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wYlwMQxBU5yY"
+        "id": "wYlwMQxBU5yY",
+        "outputId": "53cc5afe-217b-4abb-d322-4b1c6648245f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "#  Approximate pi here!"
+        "#  Approximate pi here!\n",
+        "\n",
+        "from sympy import Symbol, series\n",
+        "\n",
+        "x = Symbol('x')\n",
+        "f = 1/(1+x**2)\n",
+        "taylor = series(f, x, x0=0, n=10)\n",
+        "print(\"1. The taylor series is {} ...\".format(taylor))\n",
+        "\n",
+        "print(\"2. The taylor series of atan(x) is x - (1/3)x^3 + (1/5)x^5 - (1/7)x^7 + ...\")\n",
+        "ans=0\n",
+        "for i in range(10000):\n",
+        "  ans += ((-1)**(i+2))*(1/(2*(i)+1))\n",
+        "\n",
+        "print(\"3. The estimation of pi is {}\".format(ans*4))\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 119,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1. The taylor series is 1 - x**2 + x**4 - x**6 + x**8 + O(x**10) ...\n",
+            "2. The taylor series of atan(x) is x - (1/3)x^3 + (1/5)x^5 - (1/7)x^7 + ...\n",
+            "3. The estimation of pi is 3.1414926535900345\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
