--- a/P4M_Notebook_1.ipynb
+++ b/P4M_Notebook_1.ipynb
@@ -3831,7 +3831,7 @@
         "\n",
         "print(g)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3893,7 +3893,7 @@
         "  \n",
         "print(e)"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3923,7 +3923,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "wYlwMQxBU5yY",
-        "outputId": "53cc5afe-217b-4abb-d322-4b1c6648245f",
+        "outputId": "945be01c-b196-421c-88da-59a6463d4670",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -3945,7 +3945,7 @@
         "\n",
         "print(\"3. The estimation of pi is {}\".format(ans*4))\n"
       ],
-      "execution_count": 119,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -3976,13 +3976,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "71EwcYnMU5yY"
+        "id": "71EwcYnMU5yY",
+        "outputId": "15ae3f23-bd3c-4c8a-a776-54bd02738f25",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "#  Approximate pi more quickly here!"
+        "#  Approximate pi more quickly here!\n",
+        "\n",
+        "ans1=ans2=0\n",
+        "iterations = 4\n",
+        "\n",
+        "for i in range(iterations):\n",
+        "  ans1 += ((-1)**(i+2))*(1/(2*(i)+1)*((1/5)**(2*(i)+1)))\n",
+        "\n",
+        "for i in range(iterations):\n",
+        "  ans2 += ((-1)**(i+2))*(1/(2*(i)+1)*((1/239)**(2*(i)+1)))\n",
+        "\n",
+        "print(\"It only takes {} iterations to come to the approximation {}\".format(iterations, 4*(4*ans1-ans2)))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "It only takes 4 iterations to come to the approximation 3.1415917721821773\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -4010,14 +4033,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uJZZ9M_PU5yZ"
+        "id": "uJZZ9M_PU5yZ",
+        "outputId": "13bdef15-4cee-40ab-8967-973e8465bf58",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "from mpmath import *\n",
         "print(mp)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mpmath settings:\n",
+            "  mp.prec = 53                [default: 53]\n",
+            "  mp.dps = 15                 [default: 15]\n",
+            "  mp.trap_complex = False     [default: False]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -4031,14 +4069,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "f2aNKEWeU5yZ"
+        "id": "f2aNKEWeU5yZ",
+        "outputId": "89e0844e-aeeb-43c2-913f-e2445782a640",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "mp.dps = 50 # Let's try 50 digits precision to start.\n",
         "print(mp)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mpmath settings:\n",
+            "  mp.prec = 169               [default: 53]\n",
+            "  mp.dps = 50                 [default: 15]\n",
+            "  mp.trap_complex = False     [default: False]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -4053,35 +4106,80 @@
       "cell_type": "code",
       "metadata": {
         "scrolled": true,
-        "id": "IynhKMaLU5yZ"
+        "id": "IynhKMaLU5yZ",
+        "outputId": "d0fc1ebe-ad80-4821-8276-304f860b4314",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "sqrt(2)  # mpf(...) stands for an mp-float.  "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "mpf('1.4142135623730950488016887242096980785696718753769468')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 65
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "quMwWJJ3U5yZ"
+        "id": "quMwWJJ3U5yZ",
+        "outputId": "2772ab9d-0dc7-489e-9a6a-5f1c0dcd963c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "type(sqrt(2)) # mpmath stores numbers in its own types!"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "mpmath.ctx_mp_python.mpf"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 66
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3WEkkeNNU5yZ"
+        "id": "3WEkkeNNU5yZ",
+        "outputId": "188b7aa2-8740-44ff-e665-8e48412d0a08",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "4*mp.atan(1) # mpmath has the arctan built in.  This should be pretty close to pi!"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "mpf('3.1415926535897932384626433832795028841971693993751068')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 67
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -4095,13 +4193,41 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ulLOs22VU5yZ"
+        "id": "ulLOs22VU5yZ",
+        "outputId": "d067bd07-56e6-4c46-8e05-08b24f563c68",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "#  Explore and experiment."
+        "#  Explore and experiment.\n",
+        "from mpmath import *\n",
+        "mp.dps = 100\n",
+        "\n",
+        "p = 4/mp.sqrt(2) #inscribed perimeter using mpmath sqrt() function\n",
+        "P = 4 #circumscribed perimeter\n",
+        "iterations = 164\n",
+        "for i in range(iterations): #archimedes method\n",
+        "  P = (2*p*P)/(p+P)\n",
+        "  p = sqrt(p*P)\n",
+        "\n",
+        "print(\"Approximation: {}\".format((p+P)/2))\n",
+        "print(\"Actual digits: {}\".format(pi))\n",
+        "\n",
+        "print(\"Using the formula, I would need {} iterations to have pi precise up to 100 decimal digits.\".format(iterations))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 113,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Approximation: 3.141592653589793238462643383279502884197169399375105820974944592307816406286208998628034825342117068\n",
+            "Actual digits: 3.141592653589793238462643383279502884197169399375105820974944592307816406286208998628034825342117068\n",
+            "Using the formula, I would need 164 iterations to have pi precise up to 100 decimal digits.\n"
+          ]
+        }
+      ]
     }
   ]
 }
